--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,12 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.10)
 
 project(fmtlog CXX)
 
-if(MSVC)
-    add_compile_options(/std:c++latest)
-else()
-    add_compile_options(-Wall -O3 -std=c++17)
-    #add_compile_options(-Wall -Ofast -std=c++2a -flto -fno-exceptions -fno-rtti -fno-unwind-tables -fno-asynchronous-unwind-tables -DFMTLOG_NO_CHECK_LEVEL=1)
-    #SET(CMAKE_AR  "gcc-ar")
-    #SET(CMAKE_RANLIB  "gcc-ranlib")
-    link_libraries(pthread)
-endif()
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_BUILD_TYPE "Release")
+# set(CMAKE_BUILD_TYPE "Debug")
 
-link_directories(.)
-include_directories(fmt/include)
+find_package(fmt)
 
-add_library(fmtlog-shared SHARED fmtlog.cc)
-if(MSVC)
-  target_link_libraries(fmtlog-shared fmt)
-endif()
-install(TARGETS fmtlog-shared)
-
-add_library(fmtlog-static fmtlog.cc)
-if(MSVC)
-  target_link_libraries(fmtlog-static fmt)
-endif()
-install(TARGETS fmtlog-static)
-
-add_subdirectory(fmt)
-add_subdirectory(test)
-if(NOT MSVC)
-  add_subdirectory(bench)
-endif()
+add_executable(main main.cpp)
+target_link_libraries(main fmt::fmt)
